# BebopAutoFly

./: LICENSE  README.md
URDF for bebop autonomy/: bebop_base.urdf.xacro  bebop_base_kinect.urdf.xacro
bebop_gazebo/: .setup_assistant  CMakeLists.txt  package.xml
bebop_gazebo/config/: bebop.srdf  fake_controllers.yaml  ompl_planning.yaml  sensors_octo.yaml
bebop_gazebo/launch/: bebop_moveit_controller_manager.launch.xml  bebop_moveit_sensor_manager.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  move_groupBebopAutogenerated_notUsed.launch  moveit.rviz  moveitBebopAutogenerated_notUsed.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  plan_and_execute.launch  plan_and_execute_dso.launch  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  spawnBebop.launch  spawnBebopAndWorld.launch  spawnBebopWithKinect.launch  trajectory_execution.launch.xml  warehouse.launch
bebop_model/: .setup_assistant  CMakeLists.txt  package.xml
bebop_model/config/: bebop.srdf  fake_controllers.yaml  ompl_planning.yaml  sensors_octo_cam.yaml
bebop_model/launch/: bebop_moveit_controller_manager.launch.xml  bebop_moveit_sensor_manager.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  plan_and_execute.launch  plan_and_execute_bag.launch  plan_and_execute_real.launch  planning_context.launch  planning_pipeline.launch.xml  realBebopBag.launch  realBebopCommon.launch  realBebopTeleop.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  spawnBebop.launch  spawnBebopWithKinect.launch  trajectory_execution.launch.xml  warehouse.launch
cmd vel mux params/: realBebop.yaml
cmd vel mux params/yocs_cmd_vel_mux/launch/: cmd_vel_mux.launch  cmd_vel_mux_real.launch  realStandalone.launch
cmd vel mux params/yocs_cmd_vel_mux/param/: example.yaml  realBebop.yaml
modified files/IOWrapper/: Output3DWrapper.h
modified files/IOWrapper/OutputWrapper/: SampleOutputWrapper.h
modified files/IOWrapper/Pangolin/: PangolinDSOViewer.cpp  PangolinDSOViewer.h
modified files/action_controller/launch/: actionController.launch
modified files/action_controller/src/: actionController.cpp
modified files/pointcloud_octomap_updater/include/moveit/pointcloud_octomap_updater/: pointcloud_octomap_updater.h
modified files/pointcloud_octomap_updater/src/: pointcloud_octomap_updater.cpp
moveit_multi_dof_plans/: CMakeLists.txt  package.xml
moveit_multi_dof_plans/launch/: bebop_backandforth.launch  bebop_backtracker.launch  bebop_boomerang.launch  bebop_square.launch
moveit_multi_dof_plans/src/: backandforth.cpp  backtracker.cpp  boomerang.cpp  robottrajectoryfrompathservice.cpp  rotation.cpp  square.cpp  trajectorytransformer.cpp
moveit_multi_dof_plans/srv/: TransformTrajectory.srv
pid_controller/: CMakeLists.txt  package.xml
pid_controller/launch/: pidController.launch  pidControllerReal.launch  pidControllerSim.launch
pid_controller/src/: pidController.cpp  pidManager.cpp
sh_files/: 1-simulator.sh  1-simulatorDso.sh  2-controller.sh  3-planner.sh  3-plannerDso.sh  4-real.sh  5-realBag.sh  6-realPlanner.sh  7-realController.sh  8-bagPlanner.sh  9-plannerSimulatedDso.sh
simple_controller/: CMakeLists.txt  package.xml
simple_controller/launch/: simpleController.launch
